--- a/src/app/components/registros/inv-usuarios/inv-usuarios.component.html
+++ b/src/app/components/registros/inv-usuarios/inv-usuarios.component.html
@@ -1,1 +1,20 @@
-<p>inv-usuarios works!</p>
+<navbar></navbar>
+<h1>Registro {{titulo}}</h1>
+<table class="table">
+    <thead>
+        <tr>
+            <th *ngFor="let head of headTitle">{{head}}</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr *ngFor="let el of elements">
+
+            <td>{{el.nombre}}</td>
+            <td>{{el.puesto}}</td>
+            <td>
+                <button type="button" class="btn btn-outline-success mr-2"><i class="fas fa-edit"></i> Modificar</button>
+                <button type="button" class="btn btn-outline-danger"> <i class="fas fa-trash-alt"></i> Eliminar</button>
+            </td>
+        </tr>
+    </tbody>
+</table>
