--- a/src/app/components/altas/usuarios/usuarios.component.html
+++ b/src/app/components/altas/usuarios/usuarios.component.html
@@ -1,15 +1,15 @@
 <navbar></navbar>
 <h1>Registrar {{titulo}}</h1>
 <div class="m-3 col-md-10 card ">
-    <label class="control-label" for="nombre">Nombre: </label>
-    <input class="form-control col-md-10" id="nombre" placeholder="Nombre" formControlName="nombre" type="text">
-    <br>
-    <label class="control-label" for="puesto">Puesto: </label>
-    <input class="form-control col-md-10" id="puesto" placeholder="Puesto" formControlName="puesto" type="text">
-    <br/>
-    <label class="control-label" for="celular">Celular: </label>
-    <input class="form-control col-md-10" id="celular " placeholder="Celular" formControlName="celular" type="text">
-    <br/>
-    <button id="guardar" class="col-md-5"><i class="fas fa-cloud-download-alt"></i>
-        Guardar </button>
+    <form [formGroup]="userForm" (ngSubmit)="onSubmit()">
+        <label class="control-label" for="nombre">Nombre: </label>
+        <input class="form-control col-md-10" id="nombre" placeholder="Nombre" formControlName="nombre" type="text">
+        <br>
+        <label class="control-label" for="puesto ">Puesto: </label>
+        <input class="form-control col-md-10" id="puesto" placeholder="Puesto" formControlName="puesto" type="text">
+        <br/>
+        <button type="submit" id="guardar" class="col-md-5"><i class="fas fa-cloud-download-alt"></i>
+            Guardar </button>
+    </form>
+
 </div>
