--- a/src/app/components/registros/inv-proyectos/inv-proyectos.component.html
+++ b/src/app/components/registros/inv-proyectos/inv-proyectos.component.html
@@ -15,13 +15,15 @@
             <td>{{el.monto_p}}</td>
             <td>{{el.monto_d}}</td>
             <td>{{el.tipo_proyecto}}</td>
+            <td>{{el.id_actividad}}</td>
+            <td>{{el.proceso}}</td>
             <td>{{el.cliente}}</td>
             <td>{{el.resp_cte}}</td>
             <td>{{el.resp_asg}}</td>
             <td>{{el.estatus}}</td>
             <td>
-                <button type="button" class="btn btn-outline-success mr-2"><i class="fas fa-edit"></i> Modificar</button>
-                <button type="button" class="btn btn-outline-danger"> <i class="fas fa-trash-alt"></i> Eliminar</button>
+                <button type="button" class="btn btn-outline-success mr-2" (click)="actualizar()"><i class="fas fa-edit"></i> Modificar</button>
+                <button type="button" class="btn btn-outline-danger" (click)="borrar()"> <i class="fas fa-trash-alt"></i> Eliminar</button>
             </td>
         </tr>
 
