--- a/src/app/components/altas/registro-oficina/registro-oficina.component.html
+++ b/src/app/components/altas/registro-oficina/registro-oficina.component.html
@@ -1,37 +1,39 @@
 <navbar></navbar>
 <h1>Registrar {{titulo}}</h1>
 <div class="m-3 col-md-10 card ">
-    <div class="flex-container ">
-        <div>
-            <label class="control-label" for="resp_asg">Responsable ASG: </label><br>
-            <select id="resp_asg ">
+    <form [formGroup]="ofForm" (ngSubmit)="onSubmit()">
+        <div class="flex-container ">
+            <div>
+                <label class="control-label" for="resp_asg">Responsable ASG: </label><br>
+                <select id="resp_asg" formControlName="resp_asg">
                 <option disabled>Responsable ASG</option>
-                <option value="holi ">Holi</option>
+                <option *ngFor="let usuario of usuarios">{{usuario.nombre}}</option>
             </select>
-        </div>
-        <div>
-            <label class="control-label mr-2" for="tipo_gasto ">Tipo:</label><br>
-            <select id="tipo_gasto">
+            </div>
+            <div>
+                <label class="control-label mr-2" for="tipo_gasto">Tipo:</label><br>
+                <select id="tipo_gasto" formControlName="tipo">
+                    <option disabled>Tipo</option>
                     <option value="ingreso">Ingreso</option>
                     <option value="empresa">Egreso</option>
                   </select>
+            </div>
+            <div>
+                <label class="control-label" for="fecha">Fecha: <span><i class="far fa-calendar-alt "></i></span> </label>
+                <input class="form-control col-md-12" id="fecha" placeholder="Fecha" formControlName="fecha" type="date">
+            </div>
         </div>
         <div>
-            <label class="control-label" for="fecha">Fecha: <span><i class="far fa-calendar-alt "></i></span> </label>
-            <input class="form-control col-md-12" id="fecha" placeholder="Fecha" formControlName="fecha" type="text">
+            <label class="control-label" for="cantidad ">Cantidad: </label>
+            <input class="form-control col-md-12" id="cantidad " placeholder="Cantidad" formControlName="cantidad" type="text">
+            <br/>
+            <label class="control-label" for="descripcion">Motivo: </label>
+            <input class="form-control" id="motivo" placeholder="Motivo" formControlName="motivo" type="text">
+            <br/>
         </div>
-    </div>
-    <div>
-        <label class="control-label" for="cantidad ">Cantidad: </label>
-        <input class="form-control col-md-12" id="cantidad " placeholder="Cantidad" formControlName="cantidad" type="text">
-        <br/>
-        <label class="control-label" for="descripcion">Motivo: </label>
-        <input class="form-control" id="motivo" placeholder="Motivo" formControlName="motivo" type="text">
-        <br/>
-    </div>
 
-    <br>
-    <button type="submit" class="btn btn-dark-green" id="guardar" class="col-md-5" active><i class="fas fa-cloud-download-alt"></i> Guardar </button>
-    <alerta (click)="prueba()"> </alerta>
-
+        <br>
+        <button type="submit" class="btn btn-dark-green" id="guardar" class="col-md-5" active><i class="fas fa-cloud-download-alt"></i> Guardar </button>
+        <alerta> </alerta>
+    </form>
 </div>
