--- a/src/app/components/registros/inv-usuarios/inv-usuarios.component.html
+++ b/src/app/components/registros/inv-usuarios/inv-usuarios.component.html
@@ -7,13 +7,12 @@
         </tr>
     </thead>
     <tbody>
-        <tr *ngFor="let el of elements">
-
+        <tr *ngFor="let el of elements; let i of index">
             <td>{{el.nombre}}</td>
             <td>{{el.puesto}}</td>
             <td>
                 <button type="button" class="btn btn-outline-success mr-2" (click)="actualizar()"><i class="fas fa-edit"></i> Modificar</button>
-                <button type="button" class="btn btn-outline-danger" (click)="borrar()"> <i class="fas fa-trash-alt"></i> Eliminar</button>
+                <button type="button" class="btn btn-outline-danger" (click)="borrar(i)"> <i class="fas fa-trash-alt"></i> Eliminar</button>
             </td>
         </tr>
     </tbody>
