--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -2,7 +2,7 @@
 <nav class="navbar navbar-light bg-light mb-3">
     <a class="navbar-brand">
         <div id="sidenav" class="sidenav">
-            <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+            <a href="javascript:void(0)" id='closebtn' class="closebtn" onclick="closeNav()">&times;</a>
             <div class="acordeon">
                 <img src="../../../assets/img/logo.png" width="100%" height="15%">
                 <div class="acordeon__item">
