--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -29,8 +29,8 @@
                     <input type="radio" name="acordeon" id="item3">
                     <label  data-toggle="tooltip" data-placement="right" title="Caja" for="item3" class="acordeon__titulo">Oficina</label>
                     <div class="btn-group-vertical acordeon__contenido">
-                        <button type="button" class="btn btn-default" routerLink="/oficina">Registrar</button>
-                        <button type="button" class="btn btn-default" routerLink="/registro-oficina">Registro</button>
+                        <button type="button" class="btn btn-default" routerLink="/registro-oficina">Registrar</button>
+                        <button type="button" class="btn btn-default" routerLink="/oficina">Registro</button>
                     </div>
                 </div>
             </div>
