--- a/src/app/components/altas/gastos-generales/gastos-generales.component.html
+++ b/src/app/components/altas/gastos-generales/gastos-generales.component.html
@@ -1,13 +1,13 @@
 <navbar></navbar>
-<h1>Registrar Gastos Generales</h1>
+<h1>{{ titulo }}</h1>
 <div class="m-3 col-md-10 card ">
     <form [formGroup]="gastosForm" (ngSubmit)="onSubmit()">
         <div class="flex-container">
             <div>
                 <label class="control-label" for="resp_asg">Responsable ASG: </label><br>
                 <select id="resp_asg" formControlName="resp_asg">
-        <option disabled>Responsable ASG</option>
-        <option *ngFor="let resp of usuarios"  >{{resp.nombre}}</option>
+        <option disabled value="">Responsable ASG</option>
+        <option *ngFor="let resp of usuarios">{{resp.nombre}}</option>
       </select>
             </div>
             <div>
@@ -17,7 +17,7 @@
         </div>
         <div>
             <label class="control-label" for="cantidad ">Cantidad: </label>
-            <input class="form-control col-md-12" id="cantidad " placeholder="Cantidad" formControlName="cantidad" type="text">
+            <input class="form-control col-md-12" id="cantidad" placeholder="Cantidad" formControlName="cantidad" type="text">
             <br/>
             <label class="control-label" for="descripcion">Motivo: </label>
             <input class="form-control" id="motivo" placeholder="Motivo" formControlName="motivo" type="text">
@@ -27,7 +27,7 @@
             <div>
                 <label class="control-label mr-2" for="tipo_gasto">Tipo gasto:</label><br>
                 <select id="tipo_gasto" formControlName="tipo_gasto">
-                <option disabled class="col-md-8">Tipo gasto</option>
+                <option disabled class="col-md-8" value="">Tipo gasto</option>
                 <option value="clientes ">Clientes</option>
                 <option value="empresa ">Empresa</option>
                 <option value="hardware ">Hardware</option>
@@ -38,13 +38,13 @@
             <div>
                 <label class="control-label mr-2" for="proyecto">Proyecto:</label><br>
                 <select id="proyecto" formControlName="proyecto">
-                    <option disabled class="col-md-8">Proyecto</option>
+                    <option disabled class="col-md-8" value="">Proyecto</option>
                     <option *ngFor="let proyecto of proyectos">{{proyecto.nombre}}</option>
                   </select></div>
             <div>
                 <label class="control-label mr-2" for="estatus">Estatus:</label><br>
                 <select id="estatus" formControlName="estatus">
-                    <option disabled>Estatus</option>
+                    <option disabled value="">Estatus</option>
                     <option value="pendiente">Pentiente</option>
                     <option value="pagado">Pagado</option>
                     <option value="pagado">Incompleto</option>
@@ -53,9 +53,7 @@
             </div>
         </div>
         <br>
-
-        <button type="submit" class="btn btn-dark-green" id="guardar" class="col-md-5" active><i class="fas fa-cloud-download-alt"></i> Guardar </button>
-        <alerta> </alerta>
-
+        <button type="submit" id="guardar" class="col-md-5"><i class="fas fa-cloud-download-alt"></i>
+            {{boton}}</button>
     </form>
 </div>
