--- a/src/app/components/altas/registro-oficina/registro-oficina.component.html
+++ b/src/app/components/altas/registro-oficina/registro-oficina.component.html
@@ -1,21 +1,22 @@
 <navbar></navbar>
-<h1>Registrar {{titulo}}</h1>
+<h1>{{ titulo }}</h1>
 <div class="m-3 col-md-10 card ">
     <form [formGroup]="ofForm" (ngSubmit)="onSubmit()">
         <div class="flex-container ">
             <div>
                 <label class="control-label" for="resp_asg">Responsable ASG: </label><br>
                 <select id="resp_asg" formControlName="resp_asg">
-                <option disabled>Responsable ASG</option>
+                <option disabled value="">Responsable ASG</option>
                 <option *ngFor="let usuario of usuarios">{{usuario.nombre}}</option>
             </select>
             </div>
             <div>
                 <label class="control-label mr-2" for="tipo_gasto">Tipo:</label><br>
                 <select id="tipo_gasto" formControlName="tipo">
-                    <option disabled>Tipo</option>
-                    <option value="ingreso">Ingreso</option>
-                    <option value="empresa">Egreso</option>
+                    <option disabled value="">Tipo</option>
+                    <option value="Egreso">Egreso</option>
+                    <option value="Ingreso">Ingreso</option>
+
                   </select>
             </div>
             <div>
@@ -33,7 +34,8 @@
         </div>
 
         <br>
-        <button type="submit" class="btn btn-dark-green" id="guardar" class="col-md-5" active><i class="fas fa-cloud-download-alt"></i> Guardar </button>
-        <alerta> </alerta>
+        <br/>
+        <button type="submit" id="guardar" class="col-md-5"><i class="fas fa-cloud-download-alt"></i>
+            {{boton}}</button>
     </form>
 </div>
