--- a/src/app/components/altas/usuarios/usuarios.component.html
+++ b/src/app/components/altas/usuarios/usuarios.component.html
@@ -1,5 +1,5 @@
 <navbar></navbar>
-<h1>Registrar {{titulo}}</h1>
+<h1>{{ titulo }}</h1>
 <div class="m-3 col-md-10 card ">
     <form [formGroup]="userForm" (ngSubmit)="onSubmit()">
         <label class="control-label" for="nombre">Nombre: </label>
@@ -9,7 +9,6 @@
         <input class="form-control col-md-10" id="puesto" placeholder="Puesto" formControlName="puesto" type="text">
         <br/>
         <button type="submit" id="guardar" class="col-md-5"><i class="fas fa-cloud-download-alt"></i>
-            Guardar </button>
+            {{boton}}</button>
     </form>
-
 </div>
